[package]
name = "ttrpg-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features= ["derive"] }
colored = "3.0.0"
rand = "0.8"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }